# torque_sensor_serial

./: .gitignore  .gitmodules  CMakeLists.txt  GEMINI.md  LICENSE  README.md
include/torque_sensor/: SerialParser.h  TorqueSensor.h
src/: main.cpp
src/torque_sensor/: SerialParser.cpp  TorqueSensor.cpp
